perf(p2p): implement shared position management (embed only) and enhance direct commit handling